--- a/package.json
+++ b/package.json
@@ -1,20 +1,5 @@
 {
-  "name": "dyspass",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/qwertyhacks/dyspass.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/qwertyhacks/dyspass/issues"
-  },
-  "homepage": "https://github.com/qwertyhacks/dyspass#readme",
-  "description": ""
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
